# nexus-agent

./: .gitignore  README.md  demo_rag.py  demo_tools.py  inspect_db.py  main.py  playground.py  pyproject.toml
.github/workflows/: ci.yml
data/: dummy_info.txt
nexus_agent/: agent.py  rag.py  tools.py
nexus_agent/agents/: general.py  grader.py  rag_specialist.py  researcher.py  supervisor.py  technical.py
nexus_agent/api/: main.py  schemas.py
nexus_agent/core/: router.py  state.py
nexus_agent/ui/: app.py
tests/: test_sanity.py
