[project]
name = "nexus-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Habip ",email = "habipokcu9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.7,<0.15.0)",
    "pytest (>=9.0.1,<10.0.0)"
]
