[project]
name = "nexus-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Habip ",email = "habipokcu9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=1.1.0,<2.0.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",
    "langchain-chroma (>=1.0.0,<2.0.0)",
    "langchain-huggingface (>=1.1.0,<2.0.0)",
    "pypdf (>=6.4.0,<7.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "fastapi (>=0.123.7,<0.124.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "streamlit (>=1.52.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.7,<0.15.0)",
    "pytest (>=9.0.1,<10.0.0)"
]
